--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,8 @@ features = ["unproven"]
 version = "0.5.0"
 features = ["ram_access_1x16"]
 optional = true
+#path = "../stm32-usbd"
+git = "https://github.com/sjames/stm32-usbd.git"
 
 [dev-dependencies]
 panic-halt = "0.2.0"
@@ -49,7 +51,7 @@ heapless = "0.4.3"
 m = "0.1.1"
 mfrc522 = "0.2.0"
 serde_derive = "1.0.90"
-usb-device = "0.2.3"
+usb-device = {git = "https://github.com/sjames/stm32-usbd.git"}
 usbd-serial = "0.1.0"
 
 [dev-dependencies.byteorder]
@@ -90,6 +92,7 @@ high = ["medium"]
 xl = ["high"]
 # Connectivity line devices (`stm32f105xx` and `stm32f107xx`)
 connectivity = ["medium"]
+# set logging levels here
 
 [profile.dev]
 incremental = false
